<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="symbol">Symbol</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>

    <string name="empty_stocks_list">No Data Available</string>
    <string name="eps_estimate_current_year">EPS ESTIMATE CURRENT YEAR</string>
    <string name="eps_estimate_next_year">EPS ESTIMATE NEXT YEAR</string>
    <string name="eps_estimate_next_quarter">EPS ESTIMATE NEXT QUARTER</string>
    <string name="day_high">DAY HIGH</string>
    <string name="day_low">DAY LOW</string>
    <string name="year_low">YEAR LOW</string>
    <string name="year_high">YEAR HIGH</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="nodata">No Data available. Check your internet connection</string>
    <string name="already_available">This stock is already saved!</string>


</resources>
